[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["William <william.blackie96@gmail.com>"]
license = "None"

[tool.poetry.dependencies]
python = "^3.11"
wagtail = "^4.0.1"
dj-database-url = "~0.5.0"
gunicorn = "~20.1.0"
psycopg2 = "^2.9.2"
sentry-sdk = "^1.5.1"
whitenoise = "^5.3.0"
django-storages = "^1.13.1"
boto3 = "^1.24.89"

[tool.poetry.group.dev.dependencies]
djhtml = "^3.0.6"
djlint = "^1.31.0"
black = "^23.3.0"
fabric = "^3.1.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
pre-commit = "^3.3.3"
detect-secrets = "^1.4.0"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
gunicorn = ["gunicorn"]